hphp/test/zend/bad/ext-spl/SplFixedArray__construct_param_float.php
<?php

$array = new SplFixedArray( 3.141 );

echo $array->getSize();

?>